Thu Oct  1 00:51:51 1998  Tom Tromey  <tromey@cygnus.com>

	* texinfos.am (install-info-am): Handle case where INFO_DEPS is
	empty.  Reported by Andrew Cagney.
	(uninstall-info): Likewise.
	(dist-info): Likewise.

	* automake.in (handle_texinfo): Error if user tries to generate
	HTML.

Wed Sep 30 00:41:40 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (do_one_clean_target): Don't push previous clean
	target if this target is `mostly'.  Report from Raja R Harinath.

	* subdirs.am (mostlyclean-recursive ...): Build local_target, not
	target.  From Raja R Harinath.

	Completely changed how languages and source files are handled:
	* automake.in: Call register_language for each language.
	(lang_c_rewrite): New function.
	(lang_cxx_rewrite): Likewise.
	(lang_header_rewrite): Likewise.
	(lang_yacc_rewrite): Likewise.
	(lang_yaccxx_rewrite): Likewise.
	(lang_lex_rewrite): Likewise.
	(lang_lexxx_rewrite): Likewise.
	(lang_asm_rewrite): Likewise.
	(lang_fortran_rewrite): Likewise.
	(register_language): Likewise.
	(extension_map): New global.
	(language_map): Likewise.
	(resolve_linker): New function.
	(handle_single_transform_list): Rewrote to use lang_X_rewrite
	functions.  Changed meaning of first argument.
	(initialize_per_input): Removed seen_any_source.  Initialize
	language_scratch, extension_seen.  Removed cxx_extensions,
	seen_c_source, dir_holds_headers, dir_holds_sources.
	(handle_source_transform): Don't compute $objpat.  Pass $obj
	directly to handle_single_transform_list.
	(handle_built_sources): Fixed call to
	handle_single_transform_list.
	(lang_c_finish): New function.
	(lang_cxx_finish): Likewise.
	(lang_header_finish): Likewise.
	(lang_yacc_finish): Likewise.
	(lang_yaccxx_finish): Likewise.
	(lang_lex_finish): Likewise.
	(lang_lexxx_finish): Likewise..
	(lang_asm_finish): Likewise.
	(lang_fortran_finish): Likewise.
	(yacc_lex_finish_helper): Likewise.
	(libtool_compiler): Likewise.
	(saw_extension): New function.