@@ -4,6 +4,7 @@ New in 1.3b:
 * Support for latest autoconf, including support for objext
 * Can now put `.' in SUBDIRS to control build order
 * `include' command
+* Dependency tracking no long susceptible to deleted header file problem
 * Bug fixes
 
 New in 1.3:
