@@ -1,5 +1,8 @@
 Thu Oct  1 00:51:51 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* depend2.am (%.o): Handle deleted header file problem.
+	(%.lo): Likewise.
+
 	* texinfos.am (install-info-am): Handle case where INFO_DEPS is
 	empty.  Reported by Andrew Cagney.
 	(uninstall-info): Likewise.
